# jaeger-client-cpp

./: .appveyor.yml  .clang-format  .clang-tidy  .dockerignore  .gitignore  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE.md  codecov.yml  ycm_extra_conf.template.py
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: CodeCoverage.cmake  Config.cmake.in  Findnlohmann_json.cmake  Findthrift.cmake  Findyaml-cpp.cmake  toolchain.cmake
cmake/Hunter/: config.cmake
crossdock/: CMakeLists.txt  Dockerfile  Server.cpp  Server.h  docker-compose.yml  rules.mk
examples/: App.cpp  config.yml
examples/hotrod/: CustomerService.cpp  CustomerService.h  Delay.cpp  Delay.h  HTTPServer.cpp  HTTPServer.h
scripts/: before-install.sh  build-plugin.sh  build.sh  clang-format.sh  clang-tidy.sh  update-license.py  update-licenses.sh  upload-coverage.sh
src/cdemo/: CMakeLists.txt  cdemo.c  cdemo_tracing.cpp  cdemo_tracing.h
src/jaegertracing/: .gitignore  CMakeLists-UnitTest.cmake  CMakeLists.txt  Compilers.h  Config.cpp  Config.h  ConfigTest.cpp  Constants.h  Constants.h.in  DynamicLoad.cpp  DynamicLoad.h  DynamicLoadTest.cpp  DynamicallyLoadTracerTest.cpp  LogRecord.cpp  LogRecord.h  Logging.cpp  Logging.h  Reference.cpp  Reference.h  ReferenceTest.cpp  Span.cpp  Span.h  SpanContext.cpp  SpanContext.h  SpanContextTest.cpp  SpanTest.cpp  Tag.cpp  Tag.h  TagTest.cpp  ThriftSender.cpp  ThriftSender.h  ThriftSenderTest.cpp  ThriftTransport.cpp  ThriftTransport.h  ThriftTransportTest.cpp  TraceID.cpp  TraceID.h  TraceIDTest.cpp  Tracer.cpp  Tracer.h  (+11 more)
src/jaegertracing/baggage/: BaggageSetter.cpp  BaggageSetter.h  BaggageTest.cpp  RemoteRestrictionJSON.cpp  RemoteRestrictionJSON.h  RemoteRestrictionManager.cpp  RemoteRestrictionManager.h  Restriction.cpp  Restriction.h  RestrictionManager.cpp  RestrictionManager.h  RestrictionsConfig.cpp  RestrictionsConfig.h
src/jaegertracing/metrics/: Counter.cpp  Counter.h  Gauge.cpp  Gauge.h  InMemoryStatsReporter.cpp  InMemoryStatsReporter.h  Metric.cpp  Metric.h  Metrics.cpp  Metrics.h  MetricsTest.cpp  NullCounter.cpp  NullCounter.h  NullGauge.cpp  NullGauge.h  NullStatsFactory.cpp  NullStatsFactory.h  NullStatsFactoryTest.cpp  NullStatsReporter.cpp  NullStatsReporter.h  NullTimer.cpp  NullTimer.h  StatsFactory.cpp  StatsFactory.h  StatsFactoryImpl.cpp  StatsFactoryImpl.h  StatsReporter.cpp  StatsReporter.h  Timer.cpp  Timer.h
src/jaegertracing/net/: IPAddress.cpp  IPAddress.h  IPAddressTest.cpp  Socket.cpp  Socket.h  SocketTest.cpp  URI.cpp  URI.h  URITest.cpp
src/jaegertracing/net/http/: Error.cpp  Error.h  Header.cpp  Header.h  HeaderTest.cpp  Method.cpp  Method.h  MethodTest.cpp  Request.cpp  Request.h  Response.cpp  Response.h  ResponseTest.cpp
src/jaegertracing/platform/: Endian.cpp  Endian.h  Hostname.cpp  Hostname.h  UDP.cpp  UDP.h
src/jaegertracing/propagation/: B3Tracer.cpp  B3Tracer.h  Extractor.cpp  Extractor.h  Format.cpp  Format.h  HeadersConfig.cpp  HeadersConfig.h  Injector.cpp  Injector.h  JaegerPropagator.cpp  JaegerPropagator.h  Propagator.cpp  Propagator.h  PropagatorTest.cpp  UberTracer.cpp  UberTracer.h  W3CPropagator.cpp  W3CPropagator.h  W3CPropagatorTest.cpp  ZipkinPropagator.cpp  ZipkinPropagator.h  ZipkinPropagatorTest.cpp
src/jaegertracing/reporters/: CompositeReporter.cpp  CompositeReporter.h  Config.cpp  Config.h  InMemoryReporter.cpp  InMemoryReporter.h  LoggingReporter.cpp  LoggingReporter.h  NullReporter.cpp  NullReporter.h  RemoteReporter.cpp  RemoteReporter.h  Reporter.cpp  Reporter.h  ReporterTest.cpp
src/jaegertracing/samplers/: AdaptiveSampler.cpp  AdaptiveSampler.h  Config.cpp  Config.h  ConstSampler.cpp  ConstSampler.h  GuaranteedThroughputProbabilisticSampler.cpp  GuaranteedThroughputProbabilisticSampler.h  ProbabilisticSampler.cpp  ProbabilisticSampler.h  RateLimitingSampler.cpp  RateLimitingSampler.h  RemoteSamplingJSON.cpp  RemoteSamplingJSON.h  RemotelyControlledSampler.cpp  RemotelyControlledSampler.h  Sampler.cpp  Sampler.h  SamplerTest.cpp  SamplingStatus.cpp  SamplingStatus.h
src/jaegertracing/testutils/: CMakeLists.txt  EnvVariable.cpp  EnvVariable.h  MockAgent.cpp  MockAgent.h  MockAgentTest.cpp  SamplingManager.cpp  SamplingManager.h  TUDPTransport.cpp  TUDPTransport.h  TUDPTransportTest.cpp  TracerUtil.cpp  TracerUtil.h
src/jaegertracing/thrift-gen/: Agent.cpp  Agent.h  AggregationValidator.cpp  AggregationValidator.h  BaggageRestrictionManager.cpp  BaggageRestrictionManager.h  Collector.cpp  Collector.h  Dependency.cpp  Dependency.h  SamplingManager.cpp  SamplingManager.h  TracedService.cpp  TracedService.h  ZipkinCollector.cpp  ZipkinCollector.h  agent_constants.cpp  agent_constants.h  agent_types.cpp  agent_types.h  aggregation_validator_constants.cpp  aggregation_validator_constants.h  aggregation_validator_types.cpp  aggregation_validator_types.h  baggage_constants.cpp  baggage_constants.h  baggage_types.cpp  baggage_types.h  dependency_constants.cpp  dependency_constants.h  dependency_types.cpp  dependency_types.h  jaeger_constants.cpp  jaeger_constants.h  jaeger_types.cpp  jaeger_types.h  sampling_constants.cpp  sampling_constants.h  sampling_types.cpp  sampling_types.h  (+8 more)
src/jaegertracing/utils/: EnvVariable.h  ErrorUtil.cpp  ErrorUtil.h  ErrorUtilTest.cpp  HTTPTransporter.cpp  HTTPTransporter.h  HTTPTransporterTest.cpp  HexParsing.cpp  HexParsing.h  HttpSender.cpp  HttpSender.h  HttpSenderTest.cpp  HttpTransporter.cpp  HttpTransporter.h  HttpTransporterTest.cpp  RateLimiter.cpp  RateLimiter.h  RateLimiterTest.cpp  Regex.cpp  Regex.h  Sender.h  Transport.h  UDPClient.cpp  UDPClient.h  UDPClientTest.cpp  UDPSender.cpp  UDPSender.h  UDPSenderTest.cpp  UDPTransporter.h  YAML.cpp  YAML.h
